--- a/src/main/webapp/static/css/login2.css
+++ b/src/main/webapp/static/css/login2.css
@@ -343,3 +343,20 @@ a.zcxy {
     left: 70px;
 }
 
+.web_login .rememberMeArea{
+    height:30px;
+}
+
+.web_login .input-remember{
+    float: left;
+    font-family: "Hiragino Sans GB","Microsoft Yahei";
+    font-size: 16px;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 0px;
+    width: 50px;
+}
+
+.web_login .input-remember-checkbox{
+    margin-top:8px;
+}
